--- a/Personalize.css
+++ b/Personalize.css
@@ -1,39 +1,98 @@
 body {
-    background-color: ghostwhite;
+    background-color:white;
     }
 
+
+        
         .card {
             margin-top: 10%;
+            border:1px solid white;
+            -webkit-transform:scale(1);
+            transform:scale(1);
+            border-radius:4px;
+            box-shadow:1px 1px 2px 2px grey;
+            transition:0.3s;
+            
         }
 
         .footer {
             width: 100%;
             height: 50px;
             color: white;
-            background-color: blue;
+            background-color: rgb(20,20,20);
             text-align: center;
             margin-top: 30px;
+            opacity:0.8;
         }
 
         .menu {
-            background: linear-gradient(to right, blue, darkblue, blue);
+            background-color:rgb(20,20,20);
             color: white;
             margin-bottom: 20px;
             display: block;
+            border-radius:3px;
+            border:0px solid lightgrey;
+        }
+
+        #backgroundOP{
+            background:url("https://wallpaperset.com/w/full/3/9/c/315017.jpg");
+            opacity:0.5;
+            width:100%;
+            height:100%; 
+            z-index:-2;
+            position:fixed;
+        }
+
+        #hamb{
+            float:left;
+            
         }
 
         .nav-link {
             color: white;
             text-decoration: none;
+            display:block;
+            font-size:18px;
+            transition:0.2s;
+        }
+        .nav-link:hover {
+            color: white;
+            text-decoration: none;
+            background-color:darkgrey;
+            border-radius:4px;
+            transition:0.5s;
+        }
+        .container{
+            min-height:800px;
         }
 
         .card-body {
             text-decoration: none;
             color: black;
         }
+        .card:hover{
+            border:1px solid cadetblue;
+            border-radius:4px;
+            -webkit-transform:scale(1.02);
+            transform:scale(1.02);
+            box-shadow:3px 3px 4px 2px grey;
+            transition:0.3s;
+        }
 
         a:hover {
             text-decoration: none;
+        }
+        .list-group-item:hover, .list-group-item-action:hover{
+            -webkit-transform:scale(1.05);
+            transform:scale(1.05);
+            background-color:rgb(204, 255, 255);
+            transition:0.3s;
+        }
+        .list-group-item, .list-group-item-action{
+            -webkit-transform:scale(1);
+            transform:scale(1);
+            background-color:white;
+            transition:0.3s;
         }
 
         .spinner {
